--- a/TMS/TMS/Views/Ticket/Create.cshtml
+++ b/TMS/TMS/Views/Ticket/Create.cshtml
@@ -28,7 +28,7 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-solid">
-            @using (Html.BeginForm("Create", "Ticket", FormMethod.Post, new { @class = "form-horizontal inputform", role = "form", enctype = "multipart/form-data" }))
+            @using (Html.BeginForm("Create", "Ticket", FormMethod.Post, new { @id = "create-ticket-form", @class = "form-horizontal inputform", role = "form", enctype = "multipart/form-data" }))
             {
                 @Html.AntiForgeryToken()
                 <div class="form-group">
@@ -47,12 +47,12 @@
                 <div class="form-group">
                     <label class="control-label col-md-2">Attach file</label>
                     <div class="col-md-10">
-                        <input type="file" name="uploadFiles" multiple class="form-control" placeholder="Drop file here" />
+                        <input type="file" id="upFile" name="uploadFiles" multiple class="form-control" placeholder="Drop file here" />
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" id="saveBtn" value="Save" class="btn btn-primary btn-flat" />
+                        <input type="button" id="saveBtn" value="Save" class="btn btn-primary btn-flat" />
                         <a class="btn btn-default btn-flat" href="@(Url.Action("Index", "Ticket"))">Cancel</a>
                     </div>
                 </div>
@@ -62,7 +62,46 @@
 </div>
 @section scripts{
     <script>
-
+        $("#saveBtn").on("click", function () {
+            var formData = new FormData($('#create-ticket-form')[0]);
+            $.ajax({
+                "url": "/Ticket/Create/",
+                "method": "POST",
+                "data": formData,
+                success: function (data) {
+                    if (!data.success) {
+                        noty({
+                            text: data.msg,
+                            layout: "topRight",
+                            type: "error",
+                            timeout: 2500
+                        });
+                    }
+                    else {
+                        noty({
+                            text: data.msg,
+                            layout: "topRight",
+                            type: "success",
+                            timeout: 2500
+                        });
+                        setTimeout(function () {
+                            window.location.href = "/Ticket/Index";
+                        }, 1000);
+                    }
+                },
+                contentType: false,
+                processData: false,
+                enctype: 'multipart/form-data',
+                "error": function (e) {
+                    noty({
+                        text: "Some error occured! Please try again!",
+                        type: "error",
+                        layout: "topRight",
+                        timeout: 2500
+                    });
+                }
+            });
+        });
     </script>
 }
 
