--- a/TMS/TMS/Views/Ticket/Index.cshtml
+++ b/TMS/TMS/Views/Ticket/Index.cshtml
@@ -104,7 +104,9 @@
                                                     <div class="col-sm-2 labels">
                                                         <b>Description: </b>
                                                     </div>
-                                                    <div class="col-sm-10 pre-wrap" id="ticket-description" style="padding-left: 10px"></div>
+                                                    <div class="col-sm-10" style="padding-left: 10px">
+                                                        <span class="pre-wrap" id="ticket-description"></span>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 row-content ">
@@ -112,7 +114,14 @@
                                                     <div class="col-sm-2 labels">
                                                         <b>Solution: </b>
                                                     </div>
-                                                    <div class="col-sm-10 pre-wrap" id="ticket-solution" style="padding-left: 10px"></div>
+                                                    <div class="col-sm-10" style="padding-left: 10px">
+                                                        <span class="pre-wrap" id="ticket-solution"></span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-12 row-content" id="approve-ticket">
+                                                <div class="col-sm-offset-2 col-sm-10" style="padding-left: 20px">
+                                                    <b><i>Are you sastified with this solution?</i></b>
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 row-content ">
@@ -283,6 +292,18 @@
             initDataTable();
         });
 
+        $(document).on('click', '#read-more', function (event) {
+            $(this).parent().trunk8('revert').append(' <a id="read-less" href="#">See Less</a>');
+
+            return false;
+        });
+
+        $(document).on('click', '#read-less', function (event) {
+            $(this).parent().trunk8();
+
+            return false;
+        });
+
         $("#search-txt").keyup(function () {
             reloadDataTable();
         });
@@ -290,7 +311,6 @@
         $("#ticket-table").on("click", ".view-detail", function () {
             var id = $(this).attr('data-id'),
                 $modal = $('#detail-modal');
-
             $.ajax({
                 url: '@Url.Action("GetTicketDetail", "Ticket", new { area=""})',
                 type: "GET",
@@ -306,13 +326,15 @@
                     $('#ticket-type').text(data.type);
                     $('#ticket-mode').text(data.mode);
                     $('#ticket-category').text(data.category);
-
+                    
                     if (data.solution == "-") {
-                        $('#ticket-solution').empty().append('<i>This ticket is not solved yet.</i>');
+                        $('#ticket-solution').append('<i>This ticket is not solved yet.</i>');
+                        $('#approve-ticket').addClass('hidden');
                     }
                     else {
-                        $('#ticket-solution').text(data.solution);
+                        $('#ticket-solution').empty().text(data.solution);
                     }
+
 
                     if (data.status == 1) {
                         $('#ticket-status').empty().append('<label class="label label-info">New</label>');
@@ -320,6 +342,7 @@
                         $('#ticket-status').empty().append('<label class="label label-warning">Assigned</label>');
                     } else if (data.status == 3) {
                         $('#ticket-status').empty().append('<label class="label label-success">Solved</label>');
+                        $('#approve-ticket').removeClass('hidden');
                     } else if (data.status == 4) {
                         $('#ticket-status').empty().append('<label class="label label-danger">Unapproved</label>');
                     } else if (data.status == 5) {
@@ -332,6 +355,14 @@
                     $('#ticket-modified-date').text(data.lastModified);
 
                     $modal.modal("show");
+
+                    $('#detail-modal').show(function () {
+                        $('#ticket-solution, #ticket-description').trunk8({
+                            tooltip: false,
+                            lines: 3,
+                            fill: '&hellip; <a id="read-more" href="#">See More</a>'
+                        });
+                    });
                 },
                 failure: function (data) {
                     alert(data.d);
