--- a/TMS/TMS/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -156,6 +156,7 @@
                             <li @Html.Raw((actionName == "Urgency") ? "class='active'" : "")><a href="/Admin/ManageSC/Urgency"><i class="fa fa-circle-o"></i>Urgency</a></li>
                             <li @Html.Raw((actionName == "Priority") ? "class='active'" : "")><a href="/Admin/ManageSC/Priority"><i class="fa fa-circle-o"></i>Priority</a></li>
                             <li @Html.Raw((actionName == "Category") ? "class='active'" : "")><a href="/Admin/ManageSC/Category"><i class="fa fa-circle-o"></i>Category</a></li>
+                            <li @Html.Raw((actionName == "PriorityMatrix") ? "class='active'" : "")><a href="/Admin/ManageSC/PriorityMatrix"><i class="fa fa-circle-o"></i>Priority Matrix</a></li>
                         </ul>
                     </li>
                     <li class="treeview @Html.Raw((controllerName == "Profile") ? "active" : "")">
