--- a/TMS/TMS/Content/Site.css
+++ b/TMS/TMS/Content/Site.css
@@ -73,8 +73,6 @@ tr.shown td.details-control {
     background: url(img/details_close.png) no-repeat center center;
 }
 
-#flash-message {
-    margin: 10px 10px 10px 15px;
-    font-size: 18px;
-    padding: 10px;
+.dataTable {
+    vertical-align: middle;
 }
