--- a/TMS/TMS/Areas/Admin/Views/ManageUser/CreateRequester.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/CreateRequester.cshtml
@@ -8,7 +8,7 @@
     <div class="row" style="overflow: hidden">
         <div class="col-xs-8">
             <div class="box box-primary">
-                <div class="box-body large-text-container">
+                <div class="box-body">
                     @Html.AntiForgeryToken()
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Email&nbsp;<span style="color: red">*</span></label>
