--- a/TMS/TMS/Areas/Admin/Views/ManageUser/EditRequester.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/EditRequester.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-xs-8">
             <div class="box box-primary">
-                <div class="box-body large-text-container">
+                <div class="box-body">
                     @Html.AntiForgeryToken()
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Username</label>
