--- a/TMS/TMS/Areas/Admin/Views/ManageUser/Helpdesk.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/Helpdesk.cshtml
@@ -2,20 +2,10 @@
     ViewBag.Title = "Manage Help Desks";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-<style>
-    #helpdesk-table th {
-        font-size: 18px;
-    }
-
-    #helpdesk-table td {
-        font-size: 16px;
-        vertical-align: middle;
-    }
-</style>
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-primary">
-            <div class="box-body large-text-container">
+            <div class="box-body">
                 <a href="/Admin/ManageUser/CreateHelpDesk" class="btn btn-flat btn-primary"><i class="fa fa-plus"></i> New Help Desk</a>
                 <div class="pull-right" style="margin-right: 20px">
                     <label>Availability:</label>
@@ -27,7 +17,7 @@
                     <label>Search:</label>
                     <input type="text" id="search-txt" />
                 </div>
-                <table class="table table-bordered table-striped dataTable" id="helpdesk-table" style="width: 100%">
+                <table class="table dataTable" id="helpdesk-table" style="width: 100%">
                     <thead>
                         <tr>
                             <th>Username</th>
