--- a/TMS/TMS/Areas/Admin/Views/ManageUser/Requester.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/Requester.cshtml
@@ -4,20 +4,10 @@
     ViewBag.Title = "Manage Requesters";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-<style>
-    #requester-table th {
-        font-size: 18px;
-    }
-
-    #requester-table td {
-        font-size: 16px;
-        vertical-align: middle;
-    }
-</style>
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-primary">
-            <div class="box-body large-text-container">
+            <div class="box-body">
                 <a href="/Admin/ManageUser/CreateRequester" class="btn btn-flat btn-primary"><i class="fa fa-plus"></i> New Requester</a>
                 <div class="pull-right" style="margin-right: 20px">
                     <label>Availability:</label>
@@ -29,7 +19,7 @@
                     <label>Search:</label>
                     <input type="text" id="search-txt" />
                 </div>
-                <table class="table table-bordered table-striped dataTable" id="requester-table">
+                <table class="table dataTable" id="requester-table">
                     <thead>
                         <tr>
                             <th>Username</th>
