--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -57,6 +57,14 @@
     .pre-wrap {
         white-space: pre-wrap;
     }
+
+    .select2-dropdown {
+        z-index: 1200;
+    }
+
+    .select2-container {
+        width: 100% !important;
+    }
 </style>
 
 @section SidebarMenu {
@@ -74,8 +82,8 @@
                     <h4 class="modal-title">Do you want to cancel this ticket?</h4>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-role="btn-confirm-cancel">Yes</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+                    <button type="button" class="btn btn-primary" data-role="btn-confirm-cancel"><i class="fa fa-check" aria-hidden="true"></i> Yes</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> No</button>
                 </div>
             </div>
             <!-- /.modal-content -->
@@ -84,7 +92,7 @@
     </div>
 
     <div id="modal-merge-ticket" class="modal fade" aria-hidden="true" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-sm">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -96,8 +104,63 @@
                     <p>The oldest request will be retained as the parent request. Related asset and other information will be lost for other(child) request(s). Do you want to proceed ?</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-role="btn-confirm-merge">Yes</button>
-					<button type="button" class="btn btn-default" data-role="btn-cancel-merge">No</button>                </div>
+                    <button type="button" class="btn btn-primary" data-role="btn-confirm-merge"><i class="fa fa-check" aria-hidden="true"></i> Yes</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> No</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+
+    <div id="modal-close-ticket" class="modal fade" aria-hidden="true" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">Do you want to close this ticket?</h4>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-role="btn-confirm-close"><i class="fa fa-check" aria-hidden="true"></i> Yes</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> No</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+
+    <div id="modal-reassign-ticket" class="modal fade" aria-hidden="true" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">Reassign Ticket</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-horizontal">
+                        <div class="form-group">
+                            <label class="control-label col-md-3">Department</label>
+                            <div class="col-md-9">
+                                <select class="form-control" name="DepartmentId" data-role="ddl-department"></select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-3">Technician</label>
+                            <div class="col-md-9">
+                                <select class="form-control" name="TechnicianId" data-role="ddl-technician"></select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-role="btn-confirm-close"><i class="fa fa-check" aria-hidden="true"></i> Yes</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> No</button>
+                </div>
             </div>
             <!-- /.modal-content -->
         </div>
@@ -215,7 +278,7 @@
                                         <div class="col-sm-7"><span id="ticket-schedule-end"></span></div>
                                     </div>
                                 </div>
-                                
+
                                 <div class="col-sm-12 row-content">
                                     <div class="col-sm-6 ">
                                         <div class="col-sm-5 labels">
@@ -312,7 +375,24 @@
                 </div>
                 <div class="modal-footer">
                     <a class="btn btn-primary btn-flat" data-role="modal-btn-solve">Solve</a>
-                    <a class="btn bg-olive btn-flat" data-role="modal-btn-reopen">Reopen</a>
+                    <div class="btn-group dropup" id="reopen-div">
+                        <button type="button" class="btn bg-olive btn-flat dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Reopen <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="javascript:void(0)" data-role="btn-show-close-modal" id="reopen-close-btn">
+                                    <i class="fa fa-times-circle" aria-hidden="true"></i> Close Ticket
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)" data-role="btn-show-reassign-modal" id="reopen-reassign-btn">
+                                    <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> Reassign
+                                </a>
+                            </li>
+                            <li><a href="#" id="reopen-resolve-btn"><i class="fa fa-commenting" aria-hidden="true"></i> Re-solve Ticket</a></li>
+                        </ul>
+                    </div>
                     <button type="button" class="btn btn-default btn-flat" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -330,7 +410,6 @@
         <div class="box box-solid">
             <div class="box-header with-border">
                 <h4 class="box-title">Ticket Management</h4>
-
             </div>
             <!-- /.box-header -->
             <div class="box-body">
