--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
@@ -11,7 +11,7 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-                <form class="form-horizontal" role="form" id="form-new-ticket" method="POST">
+                <form class="form-horizontal" role="form" id="form-new-ticket" method="POST" enctype="multipart/form-data">
                     @Html.AntiForgeryToken()
                     <div class="row">
                         <div class="col-md-6">
@@ -218,6 +218,25 @@
                     window.location.href = "/HelpDesk/ManageTicket";
                 });
 
+        $('#descriptionFiles').bind('change', function () {
+
+            //converts the file size from bytes to MB
+            var fileSize = (this.files[0].size/1024/1024).toFixed(2);
+
+            //gets the full file name including the extension
+            var fileName = this.files[0].name;
+
+            //finds where the extension starts
+            var dotPosition = fileName.lastIndexOf(".");
+
+            //gets only the extension
+            var fileExt = fileName.substring(dotPosition);
+
+            alert(fileSize + " MB");
+
+
+        });
+
         //$('#descriptionFiles').addEventListener('change', handleFileSelect, false);
 
 
@@ -273,10 +292,12 @@
                                 }
                             }
                         },
+                        cache: false,
                         contentType: false,
                         processData: false,
-                        enctype: 'multipart/form-data',
-                        "error": function (e) {
+                        error: function (e) {
+                            $("[data-role=btn-submit-new-ticket]").prop("disabled", false);
+                            $("[data-role=btn-cancel]").prop("disabled", false);
                             noty({
                                 text: "Some error occured. Please try again later!",
                                 type: "error",
@@ -354,6 +375,7 @@
                 loadInitDropdown('ddl-priority', 'None', 0);
                 loadInitDropdown('ddl-impact', 'None', 0);
                 loadInitDropdown('ddl-category', 'None', 0);
+                loadInitDropdown('ddl-department', 'Choose Department', 0);
                 requesterTable = initRequesterTable($("#requester-table"));
             });
     </script>
